Renamed Login Activity to Authorization activity, added exit account opportunity and process of checking user auth status

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FinalLoanAppzalessky">
         <activity
-            android:name=".ui.LoginActivity"
+            android:name=".ui.AuthorizationActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
