Added api, datasource, repository and use case for getting loan conditions. Created activity for posting new loan request

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FinalLoanAppzalessky">
+        <activity android:name=".ui.LoanRequestActivity"></activity>
         <activity
             android:name=".ui.AuthorizationActivity"
             android:exported="true">
@@ -23,8 +24,7 @@
         </activity>
         <activity
             android:name=".ui.MainActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
     </application>
 
 </manifest>
