--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FinalLoanAppzalessky">
-        <activity android:name=".ui.LoanRequestActivity"></activity>
+        <activity android:name=".ui.LoanActivity"></activity>
+        <activity android:name=".ui.LoanRequestActivity" />
         <activity
             android:name=".ui.AuthorizationActivity"
             android:exported="true">
@@ -24,7 +25,7 @@
         </activity>
         <activity
             android:name=".ui.MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
