--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FinalLoanAppzalessky">
-        <activity android:name=".ui.loanactivity.LoanActivity"></activity>
+        <activity android:name=".ui.instruction.LoanRequestInstructionActivity"></activity>
+        <activity android:name=".ui.loanactivity.LoanActivity" />
         <activity android:name=".ui.LoanRequestActivity" />
         <activity
             android:name=".ui.AuthorizationActivity"
