--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ android {
 
 dependencies {
 
+    def room_version = "2.3.0"
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'androidx.activity:activity-ktx:1.2.2'
@@ -68,4 +70,9 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
 
     implementation 'com.google.android.material:material:1.6.1'
+
+    // Room
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 }
