Created LocalDateTime converter and repository for converting strings to localdatetime and getting strings from localdatetime values

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,7 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+
+    // ThreeTenABP with LocalDateTime for api < 26
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.1'
 }
