--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version="1.5.10"
+    ext {
+        kotlin_version = "1.5.10"
+        retrofit_version = "2.9.0"
+        room_version = "2.3.0"
+        okhttp_version = "4.10.0"
+        lifecycle_version = "2.2.0"
+        threetenabp_version = "1.2.1"
+        dagger_version = "2.37"
+        coroutines_version = "1.3.9"
+        material_design_version = "1.6.1"
+    }
     repositories {
         google()
         mavenCentral()
