--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FinalLoanAppzalessky">
-        <activity android:name=".ui.instruction.LoanRequestInstructionActivity"></activity>
-        <activity android:name=".ui.loanactivity.LoanActivity" />
-        <activity android:name=".ui.LoanRequestActivity" />
         <activity
-            android:name=".ui.AuthorizationActivity"
-            android:exported="true">
+            android:name=".ui.StartActivity"
+            android:exported="true"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".ui.instruction.LoanRequestInstructionActivity" />
+        <activity android:name=".ui.loanactivity.LoanActivity" />
+        <activity android:name=".ui.LoanRequestActivity" />
+        <activity
+            android:name=".ui.AuthorizationActivity"
+            android:exported="true">
         </activity>
         <activity
             android:name=".ui.MainActivity"
