Wrote module tests for datasource and repository layer

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,13 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    sourceSets {
+        main {
+            resources {
+                srcDirs 'src\\main\\resources', 'src\\test\\resources'
+            }
+        }
+    }
 }
 
 dependencies {
@@ -43,9 +50,14 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // Test
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"
+    testImplementation 'org.mockito:mockito-inline:4.0.0'
+    testImplementation 'io.github.ivanshafran:shared-preferences-mock:1.2.4'
 
     // Dagger
     implementation "com.google.dagger:dagger:$dagger_version"
