--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     testImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"
     testImplementation 'org.mockito:mockito-inline:4.0.0'
     testImplementation 'io.github.ivanshafran:shared-preferences-mock:1.2.4'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.3'
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
 
     // Dagger
     implementation "com.google.dagger:dagger:$dagger_version"
