--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        //testInstrumentationRunner "com.girrafeecstud.final_loan_app_zalessky.MockRunner"
     }
 
     buildTypes {
@@ -51,7 +52,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // Test
     testImplementation 'junit:junit:4.13.2'
@@ -60,6 +60,15 @@ dependencies {
     testImplementation 'io.github.ivanshafran:shared-preferences-mock:1.2.4'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.3'
     testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "com.squareup.okhttp3:mockwebserver:$okhttp_version"
+
+    // UI test
+    androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'com.kaspersky.android-components:kaspresso:1.4.1'
+    androidTestImplementation 'io.github.kakaocup:kakao:3.0.6'
+    androidTestImplementation 'androidx.fragment:fragment-testing:1.5.0'
+    androidTestImplementation "com.squareup.okhttp3:mockwebserver:$okhttp_version"
 
     // Dagger
     implementation "com.google.dagger:dagger:$dagger_version"
@@ -77,7 +86,6 @@ dependencies {
 
     // OkHttp
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
-    testImplementation "com.squareup.okhttp3:mockwebserver:$okhttp_version"
 
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
